criei a tela home

--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <title>Projeto social</title>
+    <link rel="stylesheet" href="./estilo/style.css">
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <main>
+        <section id="celular">
+            <iframe src="./home.html" frameborder="0" name="tela" id="tela"></iframe>
+        </section>
+        <section id="redes-sociais">
+
+        </section>
+    </main>
 </body>
 </html>
