--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 <body>
     <main>
         <section id="celular">
-            <iframe src="./home.html" frameborder="0" name="tela" id="tela">
+            <iframe src="./textos/home.html" frameborder="0" name="tela" id="tela">
                 Seu navegador não é compatível com isso.
             </iframe>
         </section>
         <section id="redes-sociais">
-            <a href="#" target="tela"><img src="./imagens/logo-home.jpg" alt="botão para voltar ao início"></a><br>
-            <a href="#" target="tela"><img src="./imagens/logo-youtube.jpg" alt="logo do youtube"></a><br>
-            <a href="#" target="tela"><img src="./imagens/logo-github.jpg" alt="logo do github"></a><br>
-            <a href="#" target="tela"><img src="./imagens/logo-instagram.jpg" alt="logo do instagram"></a><br>
-            <a href="#" target="tela"><img src="./imagens/logo-twitter.jpg" alt="logo do twitter"></a><br>
-            <a href="#" target="tela"><img src="./imagens/logo-facebook.jpg" alt="logo do facebook"></a>
+            <a href="./textos/home.html" target="tela"><img src="./imagens/logo-home.jpg" alt="botão para voltar ao início"></a><br>
+            <a href="./textos/youtube.html" target="tela"><img src="./imagens/logo-youtube.jpg" alt="logo do youtube"></a><br>
+            <a href="./textos/github.html" target="tela"><img src="./imagens/logo-github.jpg" alt="logo do github"></a><br>
+            <a href="./textos/instagram.html" target="tela"><img src="./imagens/logo-instagram.jpg" alt="logo do instagram"></a><br>
+            <a href="./textos/twitter.html" target="tela"><img src="./imagens/logo-twitter.jpg" alt="logo do twitter"></a><br>
+            <a href="./textos/facebook.html" target="tela"><img src="./imagens/logo-facebook.jpg" alt="logo do facebook"></a>
         </section>
     </main>
 </body>
