--- a/textos/home.html
+++ b/textos/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <title>Home</title>
     <style>
         * {
@@ -15,7 +15,7 @@
         body {
             width: 100vw;
             height: 100vh;
-            background: black url(./imagens/tela-home.jpg) no-repeat top center;
+            background: black url(../imagens/tela-home.jpg) no-repeat top center;
             background-size: cover;
         }
 
