--- a/textos/instagram.html
+++ b/textos/instagram.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <img src="../imagens/tela-instagram.jpg" alt="Instagram">
-    <a href="https://instagram.com/gustavoguanabara">ACESSE MEU PERFIL</a>
+    <a href="https://instagram.com/gustavoguanabara">ACESSE</a>
 </body>
 </html>
