ajustes nas abas

--- a/textos/facebook.html
+++ b/textos/facebook.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <img src="../imagens/tela-facebook.jpg" alt="Facebook">
-    <a href="https://facebook.com/gustavoguanabara">ACESSE</a>
+    <a href="https://facebook.com/gustavoguanabara" target="_blank">ACESSE</a>
 </body>
 </html>
