--- a/textos/twitter.html
+++ b/textos/twitter.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <img src="../imagens/tela-twitter.jpg" alt="Twitter">
-    <a href="https://twitter.com/gustavoguanabara">ACESSE</a>
+    <a href="https://twitter.com/gustavoguanabara" target="_blank">ACESSE</a>
 </body>
 </html>
